[package]
name = "rocket-hello-world"
version = "0.0.0"
edition = "2018"
authors = ["Alex Fedoseev <alex.fedoseev@gmail.com>"]
workspace = "../../"
publish = false

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-dev" }
http = "0.2.2"
ssr = { path = "../../ssr" }
log = "0.4.11"
env_logger = "0.8.1"
